hw6/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kia-user-service
  labels:
    app: kia-hw5
spec:
  selector:
    app: kia-hw5
  ports:
    - protocol: TCP
      port: 9001
      targetPort: user-web
  type: NodePort
